# dans-AI-service

./: LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
src/dans_ai_service/: Annotation.py  PDFProcessing.py  config.ini.example  main.py
