[tool.poetry]
name = "dans-AI-service"
version = "0.1.0"
description = ""
authors = ["ekoi <eko.indarto@dans.knaw.nl>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyDataverse = "^0.3.1"
datefinder = "^0.7.1"
asyncio = "^3.4.3"
pymongo = "^4.0.1"
elasticsearch = "^7.16.2"
pandas = "^1.3.5"
aiofiles = "^0.8.0"
Jinja2 = "^3.0.3"
future = "0.17.1"
bs4 = "^0.0.1"
lxml = "^4.7.1"
langdetect = "^1.0.9"
readabilipy = "^0.2.0"
doccano-client = "^1.0.3"
uvicorn = "^0.16.0"
fastapi = "^0.71.0"
spacy = "^3.2.1"
nltk = "^3.6.7"
scipy = "^1.7.3"
textacy = "^0.12.0"
PyPDF2 = "^1.26.0"

[tool.poetry.dependencies.nl_core_news_sm]
#url = "https://github.com/explosion/spacy-models/releases/download/nl_core_news_sm-3.2.0/nl_core_news_sm-3.2.0.tar.gz"
url = "https://github.com/explosion/spacy-models/releases/download/nl_core_news_sm-3.2.0/nl_core_news_sm-3.2.0.tar.gz"
[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"